logs/validate.20260324-193605.log
error[E0277]: can't compare `&T` with `T`
   --> src/Chap37/BSTSetAVLMtEph.rs:224:31
    |
224 |                 .filter(|x| x != target)
    |                               ^^ no implementation for `&T == T`
    |
    = help: the trait `std::cmp::PartialEq<T>` is not implemented for `&T`
    = note: required for `&&T` to implement `std::cmp::PartialEq<&T>`
help: consider dereferencing here
    |
224 |                 .filter(|x| *x != target)
    |                             +
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
    |
184 |     impl<T: StTInMtT + Ord + TotalOrder> BSTSetAVLMtEphTrait<T> for BSTSetAVLMtEph<T> where &T: std::cmp::PartialEq<T> {
    |                                                                                       ++++++++++++++++++++++++++++++++

error[E0277]: can't compare `&T` with `T`
   --> src/Chap37/BSTSetRBMtEph.rs:193:31
    |
193 |                 .filter(|x| x != target)
    |                               ^^ no implementation for `&T == T`
    |
    = help: the trait `std::cmp::PartialEq<T>` is not implemented for `&T`
    = note: required for `&&T` to implement `std::cmp::PartialEq<&T>`
help: consider dereferencing here
    |
193 |                 .filter(|x| *x != target)
    |                             +
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
    |
153 |     impl<T: StTInMtT + Ord + TotalOrder> BSTSetRBMtEphTrait<T> for BSTSetRBMtEph<T> where &T: std::cmp::PartialEq<T> {
    |                                                                                     ++++++++++++++++++++++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
Elapsed: 14s
